Tritao: DB Builder Table Design Operations has in the copy field the mandatory property solved and code improvements.